tests/trybuild/fail/unit_variant.stderr
error: unit struct and unit variant are not supported
 --> tests/trybuild/fail/unit_variant.rs:5:5
  |
5 |     First,
  |     ^^^^^
